# docs/swagger.yaml
@@ -1,18 +1,5 @@
 basePath: /
 definitions:
-  domain.User:
-    properties:
-      created:
-        type: string
-      email:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      updated:
-        type: string
-    type: object
   request.UserLoginRequest:
     properties:
       email:
@@ -133,6 +120,13 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/response.Post'
+      status:
+        type: string
+    type: object
+  response.UpdateUserResponse:
+    properties:
+      data:
+        $ref: '#/definitions/response.User'
       status:
         type: string
     type: object
@@ -417,10 +411,6 @@ paths:
           description: Bad request
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
         "500":
           description: Internal server error
           schema:
@@ -459,24 +449,27 @@ paths:
       - users
     put:
       consumes:
-      - application/json
-      description: Updates the user's account details. Users can only modify their
-        own account.
+      - text/plain
+      description: Updates the user's username. Users can only modify their own account.
       parameters:
       - description: User ID
         in: path
         name: id
         required: true
         type: integer
-      - description: Updated user details
+      - description: Updated username
         in: body
-        name: user
+        name: username
         required: true
         schema:
-          $ref: '#/definitions/domain.User'
+          type: string
       produces:
       - application/json
       responses:
+        "200":
+          description: Successful update user response
+          schema:
+            $ref: '#/definitions/response.UpdateUserResponse'
         "400":
           description: Bad request
           schema:
@@ -487,7 +480,7 @@ paths:
             $ref: '#/definitions/response.ErrorResponse'
       security:
       - BearerAuth: []
-      summary: Update an existing user's details
+      summary: Update an existing user's username
       tags:
       - users
 securityDefinitions:
