# pkg/request/user_request.go
@@ -1,0 +1,5 @@
+package request
+
+type UpdateUserRequest struct {
+	Username string `json:"username" validate:"required,min=3,max=50"`
+}
